[tool.poetry]
name = "silex-client"
version = "0.1.0"
description = "Python library to execute actions on DCCs in the Silex ecosystem"
authors = ["ArtFX TDs <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "silex_client" }]

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1"
logzero = "^1.7.0"
python-dotenv = "^1.0.0"
fileseq = "^1.15.0"
jsondiff = "^2.0.0"
aiohttp = "^3.8.4"
pyyaml = "^6.0"
python-socketio = "^5.8.0"
aiogazu = {git = "https://github.com/ArtFXDev/aiogazu.git", rev = "master"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
