[metadata]
name = silex_client
description = Python library to execution silex actions 
long_description = file: README.mb
keywords = silex, websockets, vfx, rez
author = Artfx TD gang
author_email = td@artfx.fr
url = https://artfx.school/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    python-socketio[client]==5.4.0
    pyyaml==5.4.1
    aiohttp==3.8.0
    fileseq==1.14.0
    jsondiff==1.3.0
    dacite==1.6.0
    qt.py==1.3.6
    logzero==1.7.0
    python-dotenv==0.19.1
    aiogazu @ git+https://github.com/ArtFXDev/aiogazu.git

[options.extras_require]
dev =
    wheel
