[metadata]
name = silex_client
description = Python library to execution silex actions 
long_description = file: README.mb
keywords = silex, websockets, vfx, rez
author = Artfx TD gang
author_email = td@artfx.fr
url = https://artfx.school/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    python-socketio[client]==5.4.0
    pyyaml==5.4.1
    aiohttp==3.8.0
    fileseq==1.14.0
    jsondiff==1.3.0
    dacite==1.6.0
    logzero==1.7.0
    python-dotenv==0.19.1
    aiogazu @ git+https://github.com/ArtFXDev/aiogazu.git

[options.extras_require]
dev =
    wheel==0.37.0
    isort==5.9.3
    black==21.7b0
    pylint==2.11.1
    pytest-timeout==2.0.1
    pytest==6.2.5
    sphinx==4.2.0
    sphinx-rtd-theme==1.0.0

[options.entry_points]
silex_action_config =
    base = silex_client.config.entry_point:action_entry_points
console_scripts =
    silex = silex_client.cli.parser:main

[options.package_data]
* = *.yaml, *.yml, .env
